--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -99,15 +99,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="MOT DE PASSE OUBLIE ?"
-            android:background="none"
+            android:background="@android:color/transparent"
             android:textColor="@android:color/holo_blue_dark"
             android:layout_gravity="right">
         </Button>
 
         <Button
+            android:id="@+id/connexion"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="CONNECTERZ-VOUS"
+            android:text="CONNECTEZ-VOUS"
             android:backgroundTint="@android:color/holo_orange_dark"
             android:layout_gravity="center"
             android:layout_marginTop="10dp">
@@ -170,10 +171,11 @@
             </TextView>
 
             <Button
+                android:id="@+id/creerCompte"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="CREE UN COMPTE"
-                android:background="none"
+                android:background="@android:color/transparent"
                 android:textColor="@android:color/holo_blue_dark">
 
             </Button>
@@ -194,7 +196,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="none"
+                android:background="@android:color/transparent"
                 android:text="Continuer avec Facebook"
                 android:textColor="@android:color/holo_blue_dark">
             </Button>
