--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -23,7 +23,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:text="Connectez-vous"
+            android:text="@string/identifiez_vous"
             android:textColor="@color/white"
             android:gravity="center_vertical"
             android:textSize="20dp">
@@ -41,13 +41,15 @@
         android:layout_height="match_parent"
         android:layout_weight="45"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center_horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Identifiez-vous"
-            android:textSize="30dp"
-            android:layout_margin="20dp">
+            android:text="@string/identifiez_vous"
+            android:textSize="20dp"
+            android:layout_margin="10dp"
+            android:layout_gravity="left"
+            android:textColor="@android:color/darker_gray">
 
         </TextView>
 
@@ -69,7 +71,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="E-mail"
-                android:textColor="@android:color/darker_gray">
+                android:textColor="@android:color/darker_gray"
+                android:backgroundTint="@android:color/darker_gray">
             </EditText>
         </LinearLayout>
 
@@ -90,15 +93,17 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Mot de passe"
-                android:textColor="@android:color/darker_gray">
+                android:text="@string/mdp"
+                android:textColor="@android:color/darker_gray"
+                android:backgroundTint="@android:color/darker_gray">
             </EditText>
         </LinearLayout>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="MOT DE PASSE OUBLIE ?"
+            android:text="@string/mdp_oublie"
+            android:textSize="16dp"
             android:background="@android:color/transparent"
             android:textColor="@android:color/holo_blue_dark"
             android:layout_gravity="right">
@@ -108,8 +113,10 @@
             android:id="@+id/connexion"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="CONNECTEZ-VOUS"
-            android:backgroundTint="@android:color/holo_orange_dark"
+            android:text="@string/connect"
+            android:textColor="#FFFF"
+            android:textSize="18dp"
+            android:background="@drawable/rect"
             android:layout_gravity="center"
             android:layout_marginTop="10dp">
         </Button>
@@ -129,7 +136,7 @@
             android:padding="20dp">
             <View
                 android:layout_width="1.5dp"
-                android:layout_height="150dp"
+                android:layout_height="125dp"
                 android:background="@android:color/darker_gray"
                 android:layout_gravity="center">
             </View>
@@ -138,12 +145,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:text="OU"
+                android:text="@string/or"
                 android:textColor="@android:color/darker_gray">
             </TextView>
             <View
                 android:layout_width="1.5dp"
-                android:layout_height="150dp"
+                android:layout_height="125dp"
                 android:background="@android:color/darker_gray"
                 android:layout_gravity="center">
             </View>
@@ -166,7 +173,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nouveau sur PowerHome ?"
+                android:text="@string/nv"
                 android:textColor="@android:color/darker_gray">
             </TextView>
 
@@ -174,7 +181,7 @@
                 android:id="@+id/creerCompte"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="CREE UN COMPTE"
+                android:text="@string/creer_compte"
                 android:background="@android:color/transparent"
                 android:textColor="@android:color/holo_blue_dark">
 
@@ -197,7 +204,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:text="Continuer avec Facebook"
+                android:text="@string/facebook"
+                android:layout_marginStart="5dp"
                 android:textColor="@android:color/holo_blue_dark">
             </Button>
         </LinearLayout>
