--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,14 +8,26 @@
     android:orientation="vertical"
     tools:context=".SplashActivity"
     android:background="@color/white">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="#4D48729E">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
-        android:scaleX="0.5"
-        android:scaleY="0.5"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:src="@drawable/logo_edf">
 
     </ImageView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Developped by Priscilla CHEN"
+        android:layout_marginTop="20dp"
+        android:textSize="15dp"/>
+</LinearLayout>
+
 </LinearLayout>
