--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,12 +44,17 @@
 
     </TextView>
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="20dp">
+        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -63,10 +68,12 @@
             </ImageView>
 
             <EditText
+                android:id="@+id/mail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
-                android:text="E-mail"
+                android:hint="E-mail"
+                android:textColorHint="@android:color/darker_gray"
                 android:backgroundTint="@android:color/darker_gray"
                 android:textColor="@android:color/darker_gray">
             </EditText>
@@ -85,9 +92,11 @@
             </ImageView>
 
             <EditText
+                android:id="@+id/mdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/mdp"
+                android:hint="@string/mdp"
+                android:textColorHint="@android:color/darker_gray"
                 android:textColor="@android:color/darker_gray"
                 android:backgroundTint="@android:color/darker_gray">
             </EditText>
@@ -99,7 +108,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/mdp_oublie"
-        android:layout_marginEnd="10dp"
         android:background="@android:color/transparent"
         android:textColor="@android:color/holo_blue_dark"
         android:layout_gravity="right">
@@ -108,7 +116,7 @@
     <Button
         android:id="@+id/connexion"
         android:background="@drawable/rect"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/connect"
         android:layout_gravity="center"
@@ -116,8 +124,7 @@
         android:textColor="#FFFF"
         >
     </Button>
-
-
+</LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
