--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -39,93 +39,106 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="45"
+        android:layout_weight="46"
         android:orientation="vertical"
         android:gravity="center_horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/identifiez_vous"
-            android:textSize="20dp"
-            android:layout_margin="10dp"
-            android:layout_gravity="left"
-            android:textColor="@android:color/darker_gray">
-
-        </TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="vertical"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp">
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/email"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="5dp">
-            </ImageView>
 
-            <EditText
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/identifiez_vous"
+                android:textSize="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="left"
+                android:textColor="@android:color/darker_gray">
+            </TextView>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="E-mail"
-                android:textColor="@android:color/darker_gray"
-                android:backgroundTint="@android:color/darker_gray">
-            </EditText>
-        </LinearLayout>
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/email"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="5dp">
+                </ImageView>
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/cadena"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="5dp">
-            </ImageView>
+                <EditText
+                    android:id="@+id/mail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="E-mail"
+                    android:textColorHint="@android:color/darker_gray"
+                    android:textColor="@android:color/darker_gray"
+                    android:backgroundTint="@android:color/darker_gray">
+                </EditText>
+            </LinearLayout>
 
-            <EditText
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/mdp"
-                android:textColor="@android:color/darker_gray"
-                android:backgroundTint="@android:color/darker_gray">
-            </EditText>
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/cadena"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="5dp">
+                </ImageView>
+
+                <EditText
+                    android:id="@+id/mdp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/mdp"
+                    android:textColorHint="@android:color/darker_gray"
+                    android:textColor="@android:color/darker_gray"
+                    android:backgroundTint="@android:color/darker_gray">
+                </EditText>
+            </LinearLayout>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mdp_oublie"
+                android:textSize="16dp"
+                android:background="@android:color/transparent"
+                android:textColor="@android:color/holo_blue_dark"
+                android:layout_gravity="right">
+            </Button>
+
+            <Button
+                android:id="@+id/connexion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/connect"
+                android:textColor="#FFFF"
+                android:textSize="18dp"
+                android:background="@drawable/rect"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp">
+            </Button>
         </LinearLayout>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/mdp_oublie"
-            android:textSize="16dp"
-            android:background="@android:color/transparent"
-            android:textColor="@android:color/holo_blue_dark"
-            android:layout_gravity="right">
-        </Button>
-
-        <Button
-            android:id="@+id/connexion"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:text="@string/connect"
-            android:textColor="#FFFF"
-            android:textSize="18dp"
-            android:background="@drawable/rect"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp">
-        </Button>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="10"
+        android:layout_weight="8"
         android:orientation="vertical"
         android:gravity="center">
         <LinearLayout
@@ -160,7 +173,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="45"
+        android:layout_weight="46"
         android:orientation="vertical"
         android:gravity="center">
         <LinearLayout
