--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="Salut IUT de Paris" />
-
-    <TextView
+        android:id="@+id/msg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="PowerHome" />
-</LinearLayout
-   >
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
 
 
