--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,7 +29,7 @@
             android:text="@string/sign_up"
             android:textColor="@color/white"
             android:gravity="center_vertical"
-            android:textSize="20dp">
+            android:textSize="20sp">
         </TextView>
 
     </LinearLayout>
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/create_account"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:padding="15dp"
         android:layout_marginBottom="20dp"
         android:textColor="@android:color/darker_gray">
@@ -67,7 +67,8 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/name"
+                android:hint="@string/name"
+                android:textColorHint="@android:color/darker_gray"
                 android:textColor="@android:color/darker_gray"
                 android:backgroundTint="@android:color/darker_gray"
                 >
@@ -78,7 +79,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
-            android:text="@string/surname"
+            android:hint="@string/surname"
+            android:textColorHint="@android:color/darker_gray"
             android:layout_marginStart="40dp"
             android:textColor="@android:color/darker_gray"
             android:backgroundTint="@android:color/darker_gray">
@@ -102,7 +104,8 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="E-mail"
+            android:hint="E-mail"
+            android:textColorHint="@android:color/darker_gray"
             android:textColor="@android:color/darker_gray"
             android:backgroundTint="@android:color/darker_gray">
         </EditText>
@@ -123,7 +126,8 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/mdp"
+            android:hint="@string/mdp"
+            android:textColorHint="@android:color/darker_gray"
             android:textColor="@android:color/darker_gray">
         </EditText>
     </LinearLayout>
@@ -147,7 +151,8 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/phone"
+            android:hint="@string/phone"
+            android:textColorHint="@android:color/darker_gray"
             android:textColor="@android:color/darker_gray"
             android:backgroundTint="@android:color/darker_gray">
         </EditText>
@@ -157,7 +162,7 @@
         android:layout_height="wrap_content"
         android:text="@string/sign_up"
         android:background="@drawable/rect"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#FFFF">
 
     </Button>
