--- a/app/src/main/res/layout/activity_habitat.xml
+++ b/app/src/main/res/layout/activity_habitat.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -10,18 +9,29 @@
     tools:context=".HabitatActivity"
     android:gravity="center_horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="hehe">
+        android:background="#0A980B">
 
-    </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:text="LearnApp"
+            android:layout_marginStart="20dp"
+            android:textColor="@color/white"
+            android:gravity="center_vertical"
+            android:textSize="20sp">
+        </TextView>
+
+    </LinearLayout>
+
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listHab"
-        android:layout_margin="20dp">
-
+        android:layout_margin="20dp"
+        android:background="@color/white">
     </ListView>
 
 </LinearLayout>
