mainactivity ne se lance pas depuis le login

--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -12,20 +12,13 @@
         android:layout_height="wrap_content"
         android:background="#232323">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/retour"
-            android:layout_gravity="center_vertical"
-            android:padding="10dp">
-
-        </ImageView>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:text="@string/identifiez_vous"
             android:textColor="@color/white"
             android:gravity="center_vertical"
+            android:layout_marginStart="12dp"
             android:textSize="20dp">
         </TextView>
 
