se deconnecter ok, fragment habitats ok, ajout d'images dans le menu

--- a/app/src/main/res/layout/fragment_habitat.xml
+++ b/app/src/main/res/layout/fragment_habitat.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HabitatFragment">
+    android:orientation="vertical"
+    tools:context=".HabitatFragment"
+    android:gravity="center_horizontal">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="habitat fragment" />
+        android:layout_height="wrap_content"
+        android:id="@+id/listHab"
+        android:layout_margin="20dp"
+        android:background="@color/white">
+    </ListView>q
 
-</FrameLayout>
+</LinearLayout>
