--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PowerHome" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.PowerHome" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">#232323</item> <!-- Couleur principale -->
+        <item name="colorOnPrimary">#FFFFFF</item> <!-- Couleur du texte -->
     </style>
 
     <style name="Theme.PowerHome" parent="Base.Theme.PowerHome" />
