--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SplashActivity"
+    tools:context=".activities.SplashActivity"
     android:background="@color/white">
 <LinearLayout
     android:layout_width="match_parent"
