--- a/app/src/main/res/layout/fragment_mes_notifications.xml
+++ b/app/src/main/res/layout/fragment_mes_notifications.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RequetesFragment">
+    tools:context=".fragments.NotificationsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="requetes" />
+        android:text="notifications fragment" />
 
 </FrameLayout>
