--- a/app/src/main/res/layout/fragment_mon_habitat.xml
+++ b/app/src/main/res/layout/fragment_mon_habitat.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MonHabitatFragment">
+    tools:context=".fragments.MonHabitatFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
