--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="green">#4CAF50</color>
     <color name="orange">#FF9800</color>
     <color name="red">#F44336</color>
+    <color name="gris">#232323</color>
 </resources>
