--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -81,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
-            android:hint="@string/surname"
+            android:hint="@string/lastname"
             android:textColorHint="@android:color/darker_gray"
             android:layout_marginStart="40dp"
             android:textColor="@android:color/darker_gray"
@@ -108,7 +108,7 @@
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="E-mail"
+            android:hint="@string/email"
             android:textColorHint="@android:color/darker_gray"
             android:textColor="@android:color/darker_gray"
             android:backgroundTint="@android:color/darker_gray">
