--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <item name="colorPrimary">#232323</item> <!-- Couleur principale -->
         <item name="colorOnPrimary">#FFFFFF</item> <!-- Couleur du texte -->
         <item name="drawerArrowStyle">@style/DrawerIcon</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Theme.PowerHome" parent="Base.Theme.PowerHome" />
